Fixed last-outcome triangle display for categorical markets, including in "my positions" (#2353)
* Fixed last outcome triangles for categorical markets

* Rid of bottom style

* Reveal outcome names for small window

* Evened text

* Removed className from style

* Fixed overlap from arrow

* Inline-block, smaller margins

* Centered arrows

* Centered arrows

* Fixed mushy text from mobile

* 1 small size

* Spacing for arrow

* Easy to modify spacing for indicator now

* px to rem

* Rid of console.log

* Rid of none check

* Started refactoring for positions arrow

* fixed merge with removing positions close button from master

* fixed data issue showing last price twice

* Portfolio page arrows alignment

* Tweaked positions arrows

* Tweaked categoreical up

* Tweaked outcomes up

* Optimized

* Optimized

* used NONE

* Typo fix

--- a/src/modules/market/components/common/outcome-trading-indicator/outcome-trading-indicator.style.less
+++ b/src/modules/market/components/common/outcome-trading-indicator/outcome-trading-indicator.style.less
@@ -10,7 +10,7 @@
   border-width: 0.625rem;
   bottom: 45%;
   margin-left: 0.9375rem;
-  position: absolute;
+  position: relative;
 
   &.small {
     border-width: 0.325rem;
@@ -23,7 +23,6 @@
 
 .TradingIndicator_arrow_buy_down {
   border-top-color: @color-positive;
-  top: 40%;
 }
 
 .TradingIndicator_arrow_sell_up {
@@ -32,6 +31,5 @@
 
 .TradingIndicator_arrow_sell_down {
   border-top-color: @color-negative;
-  top: 40%;
 }
 
